--- a/UTerminal/UTerminal/MainWindow.axaml
+++ b/UTerminal/UTerminal/MainWindow.axaml
@@ -5,7 +5,8 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="UTerminal.MainWindow"
 				FontSize="13"
-        Title="UTerminal">
+        Title="UTerminal"
+				KeyDown="MainKey_Press">
 	<Grid >
 		<DockPanel>
 				<Grid DockPanel.Dock="Top">
