--- a/UTerminal/UTerminal/MainWindow.axaml
+++ b/UTerminal/UTerminal/MainWindow.axaml
@@ -29,8 +29,19 @@
 					<TextBox x:Name="InputCmd" Grid.Column="0" Grid.Row="1" Margin="4 4 2 4"></TextBox>
 					<Button Content="Send" Grid.Column="1" Grid.Row="1" Margin="2 4 4 4" x:Name="btnSend" Click="btnSend_Click"></Button>
 				</Grid>
+			<Grid DockPanel.Dock="Bottom">
+				<Border BorderBrush="Gainsboro" BorderThickness="2" Padding="0 1 0 0" >
+					<StackPanel Orientation="Horizontal">
+						<TextBlock>Test</TextBlock>
+						<Border BorderBrush="Gainsboro" BorderThickness="2" Padding="0 0 0 0">
+							<TextBlock Foreground="Gray" Margin="2 0 2 0">CAPS</TextBlock>
+						</Border>
+				</StackPanel>
+				</Border>
+			</Grid>
+
 			<ScrollViewer>
-				<TextBlock x:Name="tbText" Margin="4"></TextBlock>
+					<TextBlock x:Name="tbText" Margin="4"></TextBlock>
 			</ScrollViewer>
 		</DockPanel>
 	</Grid>
